--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ img{
     background-color: #3882f6;
     color:#F9FAF8;
     margin: 10px 0 0 100px;
-    border-radius: 10%;
+    border-radius: 10px;
     width: auto;
 }
 .btn_forth{
