--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@ body{
 header{
     color: white;
 }
+.logotext{
+    position: absolute;
+    left:140px;
+}
 .first{
     background-color: #1f2937;
     padding: 100px;
@@ -23,19 +27,21 @@ p.imgtxt > {
 }
 ul{
     list-style-type: none;
-    margin:0;
-    padding:0;
+    padding-right:120px;
     flex-direction: row;
     flex: 1;
+    padding-top: 0;
 }
 li{
     float:right;
     direction: rtl;
+    padding: 10px;
+    
 }
 a{
     display:inline;
-    padding: 10px;
     text-decoration: none;
+    color: white;
 }
 .firsth1{
     font-size: 48px extra-bold;
@@ -50,6 +56,7 @@ a{
 }
 .firstp{
     font-size: 18px;
+    font-family: Roboto;
     color: #F9FAF8;
     text-align: left;
     margin: 30px;
@@ -70,15 +77,15 @@ img{
 .btn_first{
     background-color: #3882f6;
     color:#F9FAF8;
-    margin: 10px 0 0 100px;
+    margin: 10px 0 0 180px;
     border-radius: 10px;
-    width: auto;
+    width: 100px;
 }
 .btn_forth{
     background-color: #3882f6;
     color:#F9FAF8;
-    border-radius: 10%;
-    width: auto;
+    border-radius: 10px;
+    width: 100px;
     margin: 40px;
 }
 .col_info{
@@ -93,11 +100,20 @@ img{
  .col_forth{
     background-color: #3882f6;
 }
+
 .thirdp{
-    font: 36px light italic #1f2937;
-    width: 100%;
+    font-size: 18px;
+    color:#1f2937;
+    font-family: 'Roboto';
     text-align: left;
-    
+    padding-left:70px;
+    font-style:Italic;
+}
+.forthh1{
+    text-align: left;
+}
+.forthp{
+    text-align: left;
 }
 span{
     text-align: right;
@@ -109,6 +125,10 @@ footer{
     color:#F9FAF8;
 }
 .third_col{
-    border:3px solid #1f2937;
-    background-color: #f4f6f8;
+   
+    background-color:#E5E7EB;
+}
+.Thor{
+ text-align: right;
+ padding-right:120px;
 }
